more in-class example changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Sample Page</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css"/>
+    
   </head>
   <body>
     <header>
@@ -12,24 +15,36 @@
         <a href="#">Profile</a>
       </nav>
     </header>
-    <section class="section-1">
-      <h1>First Section</h1>
+    <div class="section-1">
+      <h1>First div</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-    </section>
-    <section class="section-2">
-      <h2>Second Section</h2>
+    </div>
+    <div class="section-2">
+      <h2>Second div</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-    </section>
+    </div>
 
-    <a href="https://www.google.com/">Google Link</a>
-    <img class="image-1" src="images/picture/guitar.png"/>
+    <a href="https://www.google.com/">Click to go to Google</a>
+
+    <img class="image-1" src="images/picture/guitar.png" alt="photograph of a guitar laying on its side"/>
     <img class="image-2" src="images/picture/guitar.png"/>
     <img class="image-3" src="images/picture/guitar.png"/>
-    <img class="image-4" src="images/picture/guitar.png"/>
+    <img src="images/picture/guitar.png" class="image-4"/>
+
+
+    <button class="example-button">Subscribe to article</button>
+
+    <a href="http://torihedden.com">
+      <button class="example-button">Visit Tori's profile page</button>
+    </a>
+
+    <button>This is a lonely button</button>
+
+
     <footer>Copyright</footer>
   </body>
 </html>
